# eia-chat

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  railway.json
app/: config.py  intent_classifier.py  llm_generator.py  main.py  memory.py  retriever.py  schemas.py  store_loader.py  store_resolver.py  stores.json
app/templates/: prompts.py
tests/: test_basic.py
